--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 <body>
 
 
-
-    <nav class="navbar navbar-expand navbar-light bg-light d-flex">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand navbar-light bg-light d-flex p-3">
+        <div class="container">
             <a class="navbar-brand" href="#"><i class="bi bi-instagram"></i>&nbsp;Instagram</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -30,7 +29,7 @@
 
                 </ul>
 
-                <div class="d-flex justify-content-end">
+                <div class="d-flex">
                     <button type="button" class="btn btn-success me-2" data-bs-toggle="modal"
                         data-bs-target="#exampleModal" data-bs-whatever="@mdo">Create a new post</button>
 
@@ -55,6 +54,7 @@
             </div>
 
             <!-- Modal para crear un nuevo post -->
+            
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
@@ -95,7 +95,7 @@
 
     <div class="tabs">
         <nav>
-            <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
+            <div class="nav nav-tabs justify-content-center gap-4 mt-3 mb-3" id="nav-tab" role="tablist">
                 <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
                     type="button" role="tab" aria-controls="nav-home" aria-selected="true"><i
                         class="bi bi-grid-3x3-gap"></i></button>
