--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                </ul>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 
                 <div class="d-flex">
                     <button type="button" class="btn btn-success me-2" data-bs-toggle="modal"
